# claude-spec-bot

./: .gitignore  CLAUDE.md  Dockerfile.poc  README.md  docker-compose.yml  pyproject.toml
orchestrator_host/: .env.example  __init__.py  approvals.py  callback_server.py  docker_exec.py  jobs.py  main.py  progress.py  slack_bot.py  state.py
runner/: .env.example  plan.md  state.json
scripts/: bootstrap.sh  doctor.sh  lint.sh  respond.sh  run.sh  test.sh
src/poc/: agent.py  callback.py  claude_client.py  event_bridge.py  handler.py  tools.py
tests/: test_hello_world.py
tests/test_orchestrator/: test_approvals.py  test_callback_server.py  test_docker_exec.py  test_jobs.py  test_progress.py  test_slack_bot.py  test_state.py
tests/test_runner/: test_agent.py  test_claude_client.py  test_event_bridge.py  test_handler.py  test_tools.py
